[project]
name = "contextforge"
version = "0.1.0"
description = "Auto-discover your org's repos and generate AI coding context"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",    
    "respx>=0.21", 
]

[project.scripts]
contextforge = "contextforge.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/contextforge"]